WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
235447
[LFC][IFC] Inline boxes with collapsible content only should not be considered opaque bidi items
https://bugs.webkit.org/show_bug.cgi?id=235447
Summary
[LFC][IFC] Inline boxes with collapsible content only should not be considere...
alan
Reported
2022-01-21 09:57:37 PST
they should be considered empty instead.
Attachments
Patch
(4.37 KB, patch)
2022-01-21 10:09 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2022-01-21 10:09:23 PST
Created
attachment 449669
[details]
Patch
EWS
Comment 2
2022-01-21 13:08:15 PST
Committed
r288371
(
246272@main
): <
https://commits.webkit.org/246272@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 449669
[details]
.
Radar WebKit Bug Importer
Comment 3
2022-01-21 13:09:22 PST
<
rdar://problem/87899231
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug